--- a/Vue/frontpage/src/stylesheet.css
+++ b/Vue/frontpage/src/stylesheet.css
@@ -84,6 +84,11 @@ form
     margin-right: 1em;
 }
 
+#lente_btt:hover
+{
+    cursor: pointer;
+}
+
 li.searchbar
 {
     padding: 0.52em 0 0.5em 1.05em;
