--- a/Vue/frontpage/src/stylesheet.css
+++ b/Vue/frontpage/src/stylesheet.css
@@ -10,8 +10,8 @@
 {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2em;
-    color: #000000;
-    background-color: #edecec;
+    --main-text-color: #000000;
+    --main-bg-color: #edecec;
     position: relative;
 }
 
@@ -285,7 +285,7 @@ ul.LinkDestra li
     margin-bottom: 1em;
 }
 
-ul.LinkDestra a, ul.LinkDestra p
+ul.LinkDestra a
 {
     border-style: solid;
     border-width: 3px;
@@ -317,12 +317,18 @@ aside a:hover
     background-color: #8F26E1;
 }
 
-a.BottoneDestra, p.BottoneDestra
+a.BottoneDestra
 {
     font-size: 1.5em;
     text-transform: capitalize;
     text-decoration: none;
     font-weight: 600;
+}
+
+#Seguito
+{
+    color: #ffffff;
+    background-color: #8F26E1;
 }
 
 #BottoneRecensioni
